--- a/Untitled17.ipynb
+++ b/Untitled17.ipynb
@@ -50,25 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Делим выборку на треин и тест + шафл\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 331,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "F = vc.fit_transform(X_train.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 332,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FF = vc.transform(X_test.text)"
    ]
   },
   {
@@ -77,6 +60,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Создаем пайплайн из Векторайзера и XGB\n",
+    "# ngram_range(min, max) - делим слова на части длиной от min до max\n",
+    "# char_wb - векторизовать по символам в слове\n",
+    "# min_df - минимально-допустимое количество (либо же частота) повтора нграммы в словаре\n",
+    "# max_df - ^\n",
+    "#  числа условные\n",
     "ppln = pipeline.make_pipeline(\n",
     "    TfidfVectorizer(ngram_range=(3, 3), analyzer='char_wb', min_df=5, max_df = 0.8, lowercase=True), \n",
     "    XGBClassifier(max_depth = 5, n_estimators=500)\n",
@@ -100,6 +89,7 @@
     }
    ],
    "source": [
+    "# считаем roc_auc на кросс-валидации из 5 сетов\n",
     "cross_val_score(ppln, X_train.text, y_train, cv=5, scoring='roc_auc')"
    ]
   },
